--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo ${{secrets.HELLO}}
+          echo ${{secrets.WORLD}}
